<resources>
    <string name="app_name">PhaseShift 2016</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--NAVIGATION MENU-->
    <string name="newsfeed">Newsfeed</string>
    <string name="events">Events</string>
    <string name="myEvents">Registered Events</string>
    <string name="results">Winners</string>
    <string name="map">Map</string>
    <string name="contact">Contact</string>
    <string name="about">About ADT PhaseShift</string>

    <!--ABOUT PHASESHIFT 2016-->
    <string name="aboutPhaseShiftPart1">Phase Shift 2016, a National Level Annual Tech Symposium, aims at having students of all disciplines to collaborate, learn, discuss, present and explore possibilities for innovation, development and applications around the theme Internet of Things(IoT) in all fields of science, engineering and management.  It provides an oppurtunity to explore one\'s interest and potentials through hackathons, makeathons, paper presentations and other events organized through professional connections.It sets the tone to kindle and nurture a spark through partnerships with reputed organizations associated with diverse interests.  The past editions of Phase Shift have been a staggering success. Each edition has helped develop students into globally competent professionals.</string>
    <string name="aboutPhaseShiftPart2">BMS College of Engineering, Bengaluru was founded in the year 1946 by Late Sri B.M.Sreenivasaiah, a great visionary and philanthropist and nurtured by his son Late Sri B.S. Narayan. BMSCE is the first private sector initiative from the erstwhile state of Mysore towards engineering education in India. Started with only three undergraduate courses, BMSCE today offers 13 undergraduate and 16 postgraduate courses both in conventional and engineering areas. Fifteen of its departments are recognised as Research Centres offering PhD/M.Sc. (Engineering by Research) degrees in Science, Engineering, Architecture and Management. Modernisation, expansion and sophistication have not changed the basic philosophy of education at BMSCE.</string>
    <string name="aboutPhaseShiftPart3">BMSCE is the first institution in the state to be bestowed with NBA Accreditation in Tier-I format(Washington Accord) for UG programs. It is a beneficiary of TEQIP Phase I and II(Technical Education Quality Improvement Programme, under World Bank Assistance) with an established Centre of Excellence in the Area of Advanced Materials. Accredited with A grade by NAAC with CGPA of 3.14/4.00. Approved by Council of Architecture (COA), New Delhi. BMSCE is currently ranked first in the state of Karnataka,14th among top 150 Engineering Institutions in India as per the Times Engineering Institutes Ranking Survey 2016.</string>
    <string name="aboutPhaseShiftPart4">The ability to, \n\u25CF\tDeploy the skills acquired for development of prototypes in support of ideas using latest technologies.\n\u25CF\tInitiate connects for sustained partnerships with organisations of diverse interests that may lead to establishment of further enterprises.\n\u25CF\tWork with multidisciplinary teams towards a common goal.\n\u25CF\tOrganise and manage the un-foreseen operational challenges.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>

    <!--LOCATIONS-->
    <string-array name="location_array">
        <item>Indoor Stadium</item>
        <item>PG 6004 (EE)</item>
    </string-array>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Newsfeed</string>
    <string name="slide_1_desc">Checkout all the updates related to PhaseShift 2016</string>

    <string name="slide_2_title">Events</string>
    <string name="slide_2_desc">Get the list of event and contact coordinator, and find on map.</string>

    <string name="slide_3_title">Maps</string>
    <string name="slide_3_desc">Get the detailed map of events happening in college</string>

    <string name="slide_4_title">Contact us</string>
    <string name="slide_4_desc">Got some doubt? Contact organising committee and follow us on social media.</string>

    <string name="play_again_desc">To see the welcome slider again, goto help</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="aboutDeveloper">About Developer</string>
    <string name="help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>

</resources>
