<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newsfeed"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/newsfeed" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_white_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_myEvents"
            android:icon="@drawable/ic_event_seat_white_24dp"
            android:title="@string/myEvents" />
        <item
            android:id="@+id/nav_winners"
            android:icon="@drawable/ic_trophy"
            android:title="@string/results" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_call_white_24dp"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_ps_logo"
            android:title="@string/about" />
    </group>
</menu>
