<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.rahulk.adtphaseshift2016.AboutPhaseShift">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:text="ABOUT PHASE SHIFT" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                android:src="@drawable/about_ps"
                android:contextClickable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/aboutPhaseShiftPart1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:text="ABOUT BMSCE" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/aboutPhaseShiftPart2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="Noteworthy Attributes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/aboutPhaseShiftPart3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:text="EXPECTED OUTCOMES" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/aboutPhaseShiftPart4" />

            <include layout="@layout/item_social"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
